<resources>
    <string name="app_name">Field Survey</string>
    <string name="accuracy">Acc</string>
    <string name="searching">Searching...</string>
    <string name="ready">Ready</string>
    <string name="nocardspacetitle">No Storage Space</string>
    <string name="lowcardspacetitle">Low Storage Space</string>
    <string name="nocardspacedialog">The SD card on this device is full and you can no longer collect data. You must clear space on the SD card in order to continue.</string>
    <string name="lowcardspacedialog">You have %%% MB of storage space left on this device\'s SD card. Once the SD card is full, you will no longer be able to collect data.</string>
    <string name="takephoto">Take Photo</string>
	<string name="takevideo">Take Video</string>
	<string name="getgeo">Check Geo Location</string>
	<string name="lat">Lat</string>
	<string name="lon">Lon</string>
	<string name="elevation">Height</string>
	<string name="savebutton">Save</string>
	<string name="clearbutton">Clear</string>
	<string name="submitbutton">Submit</string>
	<string name="geodialog">GPS must be enabled to do this. Select OK to go to	the settings page. Select Use GPS Satellites and then press the back button to return. Once GPS is enabled you can click Check Geo Location again to get your position.</string>
	<string name="currentuser">Current User:</string>
	<string name="lastsync">Last Sync:</string>
	<string name="userlabel">Manage Users</string>
	<string name="dontPaniclabel">Don\'t Panic</string>
	<string name="dontPanicMsg">Just make sure you know where your towel is!</string>
	<string name="tooBigPhotoTitle">Large File Size</string>
	<string name="tooBigPhotoMsg">The photo file is very large. If you set the camera to take smaller pictures, they will be more likely to upload successfully. Visit the camera settings on your device to reduce the picture resolution.</string>
	<string name="photosizereminderlabel">Remind user of large photo size</string>
	<string name="giveitarestbutton">Stop reminding me</string>
	<string name="shrinkphotoslabel">Shrink large photos</string>
	<string name="wplabel">Community Waterpoint Survey</string>
	<string name="hhlabel">Household Survey</string>
	<string name="publabel">Public Institution Survey</string>
	<string name="settingslabel">Settings</string>
	<string name="maplabel">Mapping</string>
	<string name="unknown">unknown</string>
	<string name="adduser">Add User</string>
	<string name="nouser">No Users!</string>
	<string name="displayname">Display Name</string>
	<string name="email">Email Address</string>
	<string name="userinstructions">Select the current user by clicking. To create a new user, press the Menu button and select Add User. Long-click to edit a user.</string>
	<string name="editmenu">Edit User</string>
	<string name="deleteusermenu">Delete User</string>
	<string name="mustselectuser">Please click the Manage Users icon and choose a user before continuing.</string>
	<string name="syncinprogress">Synchronizing...</string>
	<string name="exportcomplete">Data has been exported to SD card</string>
	<string name="uploadcomplete">All data has been sent to the server</string>
	<string name="uploadprogress">Sending data to server</string>
	<string name="filecomplete">File uploaded successfully</string>
	<string name="nothingtoexport">There is no unsent data</string>
	<string name="prefoptlabel">Preferences</string>
	<string name="prefoptdesc">Set default survey language and other preference data</string>
	<string name="exportoptlabel">Export Data</string>
	<string name="exportoptdesc">Exports survey data to a zip file on the device\'s SD card</string>
	<string name="sendoptlabel">Send Data</string>
	<string name="sendoptdesc">Sends survey data to server. You must have data access (cellular or wi-fi) to perform this operation.</string>
	<string name="poweroptlabel">Power Management</string>
	<string name="poweroptdesc">Toggles Wi-Fi to better manage battery life.</string>
	<string name="screenoptlabel">Keep Screen on During Survey Input</string>
	<string name="screenoptdesc">Prevents the screen from turning off while in survey entry mode. Be sure to manually shut the screen off (or exit the app) when not in use to avoid draining the battery.</string>
	<string name="aboutlabel">About</string>
	<string name="aboutdesc">Displays version information.</string>
	<string name="abouttitle">About - FieldSurvey</string>
	<string name="abouttext">FieldSurvey\nDeveloped By: Akvo Foundation\nCopyright © 2010-2013 Stichting Akvo\nVersion </string>
	<string name="gpsstatuslabel">GPS Status</string>
	<string name="gpsstatusdesc">Launches the GPS Status application if you have it installed on this device.</string>
	<string name="nogpsstatus">GPS Status is not installed on this device. Please install it using the Android Market.</string>
	<string name="otherinstructions">Please enter a description</string>
	<string name="okbutton">OK</string>
	<string name="cancelbutton">Cancel</string>
	<string name="mandatorywarning">Questions marked with a * are mandatory. You must answer the following questions before you can submit:</string>
	<string name="cannotsave">Cannot submit responses</string>
	<string name="plottinglabel">Area Plotting</string>
	<string name="addpoint">Add Point</string>
	<string name="startplotting">Start Plotting</string>
	<string name="stopplotting">Stop Plotting</string>
	<string name="completeplot">Complete Plot</string>
	<string name="noplots">No Plots</string>
	<string name="addplot">Create New Plot</string>
	<string name="editplot">Edit Plot</string>
	<string name="description">Description</string>
	<string name="plotinstructions">Select the desired plot by clicking. To create a new plot, press the Menu button and select Add New Plot. Long-click to edit the name or description of an existing plot.</string>
	<string name="deletepointdialog">Are you sure you want to remove this point from the plot?</string>
	<string name="texthelpoption">View Help Text</string>
	<string name="videohelpoption">View Help Video</string>
	<string name="photohelpoption">View Help Photos</string>
	<string name="activityhelpoption">Launch Calculator</string>
	<string name="helpheading">Help Options</string>
	<string name="toggleplotmode">Toggle Plot Mode</string>
	<string name="plotsettings">Settings</string>
	<string name="plotinterval">Set Plot Interval</string>
	<string name="surveysupdated">Installed surveys have been updated</string>
	<string name="deletesurvey">Delete Survey</string>
	<string name="othertext">Other...</string>
	<string name="savelastuserlabel">Keep the last selected user logged-in between sessions</string>
	<string name="uploadoptionlabel">Upload data over cellular network</string>
	<string name="uploadoptiondialogtitle">Upload via cellular</string>
	<string name="surveylanglabel">Survey Languages</string>
	<string name="beaconlabel">Send Location Beacons</string>
	<string name="cacheptcountrylabel">Download Points for Countries</string>
	<string name="precachehelplabel">Pre-cache data and help media</string>
	<string name="precachehelpdialogtitle">Pre-cache data and help media</string>
	<string name="scanbarcode">Scan Barcode</string>
	<string name="barcodeerror">Scanner not installed. Please install the Barcode Scanner app from the Android Market.</string>
	<string name="imagehelpviewmessage">Click a thumbnail to view larger image. Press back key to return to survey.</string>
	<string name="validationerrtitle">Invalid Response</string>
	<string name="toosmallerr">Value is too small. Minimum value: </string>
	<string name="toolargeerr">Value is too large. Maximum value: </string>
	<string name="baddatatypeerr">Answer must be numeric</string>
	<string name="nothingnearby">No nearby access points</string>
	<string name="nearbyinstructions">Click on an access point to see details. Press back to return to main menu.</string>
	<string name="pointname">Point Name: </string>
	<string name="distance">Distance: </string>
	<string name="pointtypelabel">Point Type:</string>
	<string name="nearbylabel">Nearby Access Points</string>
	<string name="itemstatus">Status: </string>
	<string name="techtype">Technology Type: </string>
	<string name="navigate">View on Map</string>
	<string name="serverlabel">Data Server (only change if instructed)</string>
	<string name="flushpointslabel">Delete cached access points</string>
	<string name="flushpointsdesc">Deletes the cached access points in the Nearby Points section. They will be re-downloaded on next launch if precache is enabled.</string>
	<string name="reloadsurveyslabel">Reload all surveys</string>
	<string name="reloadsurveysdesc">Deletes and re-downloads assigned surveys (only run if instructed)</string>
	<string name="conftitle">Please Confirm</string>
	<string name="reloadconftext">Are you sure you want to purge and re-download surveys?</string>
	<string name="submitcompletetitle">Survey submitted</string>
	<string name="submitcompletetext">Survey responses will be sent to the server.</string>
	<string name="savecompletetitle">Survey saved</string>
	<string name="savecompletetext">Survey responses have been saved.</string>
	<string name="optiontext">Option</string>
	<string name="largetxtoption">Large Text</string>
	<string name="normaltxtoption">Normal Text</string>
	<string name="langoption">Languages</string>
	<string name="reviewtext">Touch a survey to view, edit and submit.</string>
	<string name="reviewrotext">Touch a survey to view (read only).</string>
	<string name="savedsurveyslabel">Saved surveys</string>
	<string name="submittedsurveyslabel">Review Submitted Surveys</string>
	<string name="reviewlabel">Survey Status</string>
	<string name="gosavedsurveyslabel">Review Saved Surveys</string>
	<string name="gosubmittedsurveyslabel">Review Submitted Surveys</string>
	<string name="goclassicsurveyslabel">Review Surveys (obsolete)</string>
	<string name="langmandatorytitle">Invalid Selection</string>
	<string name="langmandatorytext">You must select at least one language</string>
	<string name="pleasewait">Please wait</string>
	<string name="downloadsurveylabel">Download Survey</string>
	<string name="downloadsurveydesc">Downloads arbitrary surveys (only run if instructed)</string>
	<string name="downloadsurveyinstr">Enter the survey id you wish to download.</string>
	<string name="deleteall">Delete all</string>
	<string name="submittedsurveysmenu">Submitted Surveys</string>
	<string name="deleteallwarning">This will permanently delete all survey responses (saved AND submitted) on the device. Click OK to proceed or cancel to abort.</string>
	<string name="deletealldatawarning">This will permanently delete all data (surveys, responses, images, and users) on the device. This operation is not reversible. Click OK to proceed or cancel to abort.</string>
	<string name="deleteonewarning">This will permanently delete this survey response. Click OK to proceed or cancel to abort.</string>
	<string name="waterflowcalclabel">Waterflow Calculator</string>
	<string name="calctext">Fill in any two values and click solve to calculate the third.</string>
	<string name="dialabel">Diameter</string>
	<string name="velocitylabel">Velocity</string>
	<string name="flowratelabel">Flow Rate</string>
	<string name="onlyonecanbeblank">Only one input field can be blank.</string>
	<string name="invalidinput">Invalid Input</string>
	<string name="solvebutton">Solve</string>
	<string name="countryselection">Select Country</string>
	<string name="loadingnearby">Loading nearby points</string>
	<string name="starttrack">Start Track</string>
	<string name="endtrack">End Track</string>
	<string name="donebutton">Done</string>
	<string name="identlabel">Device Identifier</string>
	<string name="surveychecklabel">Automatically Check for Survey Updates</string>
	<string name="uploaderrorlabel">Automatically Upload App Errors</string>
	<string name="radiuslabel">Search radius for Points</string>
</resources>