<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_height="wrap_content"
	android:layout_width="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical">
	<TableRow android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:clickable="true" android:id="@+id/sendOption">
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:orientation="vertical">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sendoptlabel" android:textSize="20dp" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/sendoptdesc" />
		</LinearLayout>
	</TableRow>
	<TableRow android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:clickable="true" android:id="@+id/exportDataOption">
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:orientation="vertical">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/exportoptlabel" android:textSize="20dp" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/exportoptdesc" />
		</LinearLayout>
	</TableRow>
	<TableRow android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:focusable="true" android:clickable="true" android:id="@+id/powerMgmtOption">
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:orientation="vertical">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/poweroptlabel" android:textSize="20dp" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/poweroptdesc" />
		</LinearLayout>
	</TableRow>
</TableLayout>
	