<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/displayname" />
		<EditText android:id="@+id/displayNameField"
			android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
	</LinearLayout>
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/description" />
	<EditText android:id="@+id/descField" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:scrollbars="vertical" />
	<Button android:id="@+id/confirm" android:text="@string/savebutton"
		android:layout_height="wrap_content" android:layout_weight="0" android:layout_width="fill_parent"/>
</LinearLayout>