<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/pointname" />
		<TextView android:id="@+id/pointNameField"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/distance" />
		<TextView android:id="@+id/distanceField"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />
		<ImageView android:id="@+id/arrowView"
			android:layout_height="wrap_content" android:layout_width="wrap_content" />
	</LinearLayout>
<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/techtype" />
		<TextView android:id="@+id/techTypeField"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/itemstatus" />
		<TextView android:id="@+id/statusField"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>
	
</LinearLayout>