<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/android:list"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="vertical">
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<ImageButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/radiusbutton"
				android:src="@android:drawable/arrow_down_float"
				android:layout_alignParentRight="true" />
			<TextView android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/radiuslabel"
				android:text="@string/radiuslabel" android:layout_toLeftOf="@id/radiusbutton" />
			<TextView android:textSize="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/radiusvalue"
				android:layout_below="@id/radiuslabel" />
		</RelativeLayout>
	    <RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<CheckBox android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/lastusercheckbox"
				android:layout_alignParentRight="true" />
			<TextView android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/lastuserlabel"
				android:text="@string/savelastuserlabel" android:layout_toLeftOf="@id/lastusercheckbox" />
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<CheckBox android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/screenoptcheckbox"
				android:layout_alignParentRight="true" />
			<TextView android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/screenopttxt"
				android:text="@string/screenoptlabel" android:layout_toLeftOf="@id/screenoptcheckbox" />
			<TextView android:textSize="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_below="@id/screenopttxt"
				android:text="@string/screenoptdesc" />
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<ImageButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/uploadoptionbutton"
				android:src="@android:drawable/arrow_down_float"
				android:layout_alignParentRight="true" />
			<TextView android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/uploadoptionlabel"
				android:text="@string/uploadoptionlabel" android:layout_toLeftOf="@id/uploadoptionbutton" />
			<TextView android:textSize="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/uploadoptionvalue"
				android:layout_below="@id/uploadoptionlabel" />
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<ImageButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/surveylangbutton"
				android:src="@android:drawable/arrow_down_float"
				android:layout_alignParentRight="true" />
			<TextView android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/surveylanglabel"
				android:text="@string/surveylanglabel" android:layout_toLeftOf="@id/surveylangbutton" />
			<TextView android:textSize="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/surveylangvalue"
				android:layout_below="@id/surveylanglabel" />
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<ImageButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/precachepointbutton"
				android:src="@android:drawable/arrow_down_float"
				android:layout_alignParentRight="true" />
			<TextView android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/cacheptcountrylabel"
				android:text="@string/cacheptcountrylabel" android:layout_toLeftOf="@id/precachepointbutton" />
			<TextView android:textSize="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/cacheptcountryvalue"
				android:layout_below="@id/cacheptcountrylabel" />
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<CheckBox android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/beaconcheckbox"
				android:layout_alignParentRight="true" />
			<TextView android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/beaconlabel"
				android:text="@string/beaconlabel" android:layout_toLeftOf="@id/beaconcheckbox" />
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<ImageButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/surveycheckbutton"
				android:src="@android:drawable/arrow_down_float"
				android:layout_alignParentRight="true" />
			<TextView android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/surveychecklabel"
				android:text="@string/surveychecklabel" android:layout_toLeftOf="@id/surveycheckbutton" />
			<TextView android:textSize="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/surveycheckvalue"
				android:layout_below="@id/surveychecklabel" />
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<ImageButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/uploaderrorbutton"
				android:src="@android:drawable/arrow_down_float"
				android:layout_alignParentRight="true" />
			<TextView android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/uploaderrorlabel"
				android:text="@string/uploaderrorlabel" android:layout_toLeftOf="@id/uploaderrorbutton" />
			<TextView android:textSize="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/uploaderrorvalue"
				android:layout_below="@id/uploaderrorlabel" />
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<ImageButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/precachehelpbutton"
				android:src="@android:drawable/arrow_down_float"
				android:layout_alignParentRight="true" />
			<TextView android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/precachehelplabel"
				android:text="@string/precachehelplabel" android:layout_toLeftOf="@id/precachehelpbutton" />
			<TextView android:textSize="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/precachehelpvalue"
				android:layout_below="@id/precachehelplabel" />
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<ImageButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/serverbutton"
				android:src="@android:drawable/arrow_down_float"
				android:layout_alignParentRight="true" />
			<TextView android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/serverlabel"
				android:text="@string/serverlabel" android:layout_toLeftOf="@id/serverbutton" />
			<TextView android:textSize="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/servervalue"
				android:layout_below="@id/serverlabel" />
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<ImageButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/identbutton"
				android:src="@android:drawable/arrow_down_float"
				android:layout_alignParentRight="true" />
			<TextView android:textSize="20dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/identlabel"
				android:text="@string/identlabel" android:layout_toLeftOf="@id/identbutton" />
			<TextView android:textSize="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/identvalue"
				android:layout_below="@id/identlabel" />
		</RelativeLayout>
	</LinearLayout>
</ScrollView>
